--- a/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/postions.css
+++ b/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/postions.css
@@ -32,9 +32,9 @@ h1 {
 .child1 {
     background-color: red;
     /* top: 50px; */
-    /* position: relative; */
+    position: relative;
     /* position: fixed; */
-    /* top: 0; */
+    top: 0;
     /* bottom: 0; */
     /* left: 0;
     right: 0; */
