--- a/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/style.css
+++ b/Week 05 (Class 09 and 10)/Saturday/Class 09 (Girls)/style.css
@@ -3,63 +3,68 @@
     margin: 0;
     padding: 0;
 }
-html{
+
+.parent .div-px{
+    background-color: aquamarine;
+    font-size: 25px;
+    width: 840px;
+}
+
+.parent .div-vw{
+    background-color: bisque;
+    border: 5px solid black;
+    width: 60vw;
+    height: 30vh;
+    /* padding: 5vh 3vw; */
+    font-size: 5vh
+}
+/* div .vw{
+    background-color: rgb(255, 242, 127);
+    font-size: 5vh
+} */
+
+.parent .div-vw p{
+    background-color: burlywood;
+}
+
+
+.parent .child-em {
+    font-size: 30px;
+    background-color: beige;
+    border: 2px solid black;
+}
+
+.parent .child-em .para-2{
+    font-size: 2em;  /*30 * 2em = 60 */
+}
+
+.parent .child-em section p{
+    font-size: 1em;
+}
+
+.parent .child-rem{
+    background-color: aquamarine;
     font-size: 20px;
 }
-.box{
-    border: 2px solid red;
-    /* width: 1280px; */
-    width: 80vw;
-    background-color: azure;
-    margin: auto;
-    height: 10vh;
-    
-}
 
-.homescreen{
-    background-color: aqua;
-    border: 2px solid red;
-     width: 80vw;
-     margin: 20px auto;
-     /* height: 83vh; */
-     min-height: 83vh;
-     font-size: 18px;
-
-}
-
-.homescreen > p {
-/* .homescreen p { */
-    font-size: 2em;
-}
-.child-1{
-    background-color: rgb(6, 217, 62);
-}
-.child-2{
-    background-color: rgb(217, 52, 6);
-    font-size: 40px;
-}
-.child-2 p {
-    font-size: 2em;
-}
-
-.child-3{
+.parent .child-rem p {
     font-size: 3rem;
-    background-color: blanchedalmond;
 }
 
-footer{
-    background-color: yellow;
-    width: 80vw;
-    margin: auto;
+#percentage{
+width: 100%;
+height: 100%;
+background-color: rgb(13, 211, 20);
+font-size: 100%; /*//16px */
+font-size: 2rem; 
 }
 
-.viewport{
-    background-color: green;
-    /* height: 80vw; */
-    width: 80vw;
-    margin: auto;
+#percentage div{
+    border: 2px solid red;
+    /* width: 25vw;
+    height: 20vh; */
+    width: 50%;
+    height: 50vh;
+    font-size: 50%;
 }
 
-a:visited {
-  color: green;
-}
